# sealos-fastapi-tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml
app/: __init__.py  database.py  main.py  models.py
deploy/: application.yaml  migration-job.yaml  source-migration-job.yaml
evidence/phase-22/: README.md  checksums.txt  cleanup.txt  commands.txt  http.jsonl  jobs.txt  migrations.txt
migrations/: env.py
migrations/versions/: 0001_create_tasks.py
scripts/: test-postgres.sh  test-production.sh
tests/: conftest.py  test_api.py  test_health.py  test_migration_job.py  test_migrations.py  test_postgres_harness.py  test_production.py
