[project]
name = "sealos-fastapi-tutorial"
version = "0.1.0"
description = "Tasks API reference application for the Sealos FastAPI tutorial series"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "pydantic==2.13.4",
  "psycopg[binary]==3.3.4",
  "sqlalchemy==2.0.51",
  "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
